# llm-agent-workshop

./: .gitignore  .replit  PROJECT_STRUCTURE.md  README.md  a2a_news_client.py  a2a_news_server.py  a2a_news_server_simplified.py  agent_prompt_compact.txt  env.example  mcp_news_server.py  pyproject.toml  run.sh  test_core_services.py  test_langflow.py
core_services/: __init__.py  gdelt_service.py  google_news_service.py
custom_components/: gdelt_doc_search_component.md  gdelt_doc_search_component.py  gdelt_doc_search_component_with_core.py  google_news_rss_component.md  google_news_rss_component.py  google_rss_article_fetcher.py  news_content_extractor.md  news_content_extractor.py  news_content_extractor_with_core.py
custom_flows/: 01_SDS_Research_Agent.json  02_SDS_Research_Agent.json  New Researcher.json
docs/: Chapter 1. Langflow Hands on.md  Chapter 2. Agent Flow & GDELT.md  Chapter 3. MCP 이론.md  Chapter 4. MCP 전환.md  Chapter 5. A2A 통합.md
langflow-agent/core_services/: content_extractor_service.py
langflow-agent/custom_components/: news_content_extractor.py
langflow-agent/custom_flows/: New Researcher MCP.json
langflow_agent/: mcp_news_server.py
langflow_agent/core_services/: gdelt_service.py
langflow_agent/custom_components/: gdelt_doc_search_component.py  google_news_rss_component.py
langgraph-agent/: ui_template.html
langgraph_agent/: A2A_IMPLEMENTATION_REVIEW.md  langgraph_tutorial.ipynb  session4_handson.ipynb  session_6_mcp_host.py  start_a2a_server.sh  trading_agent.py  trading_api.py  trading_bot_host.py  trading_mcp_server.py  ui_template.html
langgraph_agent_with_a2a/: news_a2a_client.py  session_7_a2a_host.py  session_7_mcp_server.py  ui_template.html
