[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "requests-cache>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pandas>=2.2.0",
    "loguru>=0.7.0",
    "langflow>=1.6.8",
    "httpx>=0.25.0",
    "urllib3>=2.0.0",
]
