[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "requests-cache>=1.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pandas>=2.2.0",
    "loguru>=0.7.0",
    "httpx>=0.25.0",
    "urllib3>=2.0.0",
    "mcp[cli]>=1.10.1",
    "langgraph>=1.0.3",
    "langchain-core>=1.0.0",
    "langchain-openai>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=13.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
    "ipython<9",
]
